Base-Infrastructure/VNet-VM-Template.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "metadata": {
    "author": "IT Team",
    "description": "This template deploys a complete web application infrastructure including:",
    "components": [
      "Virtual Network with two subnets",
      "Two Ubuntu web servers in an availability set",
      "Network Security Group with HTTP and SSH rules",
      "Standard SKU Public IPs with static allocation",
      "Network interfaces with security groups"
    ],
    "prerequisites": [
      "Azure subscription",
      "Resource group created",
      "Contributor access to the resource group"
    ]
  },
  "parameters": {
    "environment": {
      "type": "string",
      "allowedValues": ["Production", "Development", "Testing"],
      "defaultValue": "Production",
      "metadata": {
        "description": "Deployment environment type"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "westeurope",
      "metadata": {
        "description": "Location for all resources"
      }
    },
    "vmSize": {
      "type": "string",
      "defaultValue": "Standard_B1s",
      "metadata": {
        "description": "Size of the virtual machines"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Admin username for VMs"
      }
    },
    "adminPasswordOrKey": {
      "type": "securestring",
      "metadata": {
        "description": "SSH Key or password for VMs"
      }
    }
  },
  "variables": {
    "vnetName": "[concat('MyDello-VNet-', parameters('environment'))]",
    "nsgName": "[concat('MyDello-NSG-', parameters('environment'))]",
    "availabilitySetName": "MyDello-AvSet-Web",
    "vmNamePrefix": "MyDello-VM-Web",
    "subnetNames": ["WebSubnet", "DataSubnet"],
    "standardTags": {
      "ENV": "[parameters('environment')]",
      "Owner": "IT Team",
      "Department": "Marketing",
      "Backup Policy": "High"
    }
  },
  "resources": [
    {
      "type": "Microsoft.Compute/availabilitySets",
      "apiVersion": "2021-03-01",
      "name": "[variables('availabilitySetName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Aligned"
      },
      "properties": {
        "platformFaultDomainCount": 2,
        "platformUpdateDomainCount": 5
      },
      "tags": "[variables('standardTags')]"
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2021-03-01",
      "name": "[concat('MyDello-PublicIP-Web-', copyIndex(1))]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "copy": {
        "name": "publicIPCopy",
        "count": 2
      },
      "properties": {
        "publicIPAllocationMethod": "Static",
        "publicIPAddressVersion": "IPv4"
      },
      "tags": "[variables('standardTags')]"
    },
    {
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2021-03-01",
      "name": "[variables('vnetName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": ["10.1.0.0/16"]
        },
        "subnets": [
          {
            "name": "[variables('subnetNames')[0]]",
            "properties": {
              "addressPrefix": "10.1.1.0/24",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
              }
            }
          },
          {
            "name": "[variables('subnetNames')[1]]",
            "properties": {
              "addressPrefix": "10.1.2.0/24"
            }
          }
        ]
      },
      "tags": "[variables('standardTags')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
      ]
    },
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2021-03-01",
      "name": "[variables('nsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow-HTTP",
            "properties": {
              "priority": 100,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "Allow-SSH",
            "properties": {
              "priority": 110,
              "direction": "Inbound",
              "access": "Allow",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "VirtualNetwork"
            }
          },
          {
            "name": "Deny-All",
            "properties": {
              "priority": 4096,
              "direction": "Inbound",
              "access": "Deny",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      },
      "tags": "[variables('standardTags')]"
    },
    {
      "type": "Microsoft.Network/networkInterfaces",
      "apiVersion": "2021-03-01",
      "name": "[concat('MyDello-NIC-Web-', copyIndex(1))]",
      "location": "[parameters('location')]",
      "copy": {
        "name": "nicCopy",
        "count": 2
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', variables('vnetName'))]",
        "publicIPCopy"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vnetName'), variables('subnetNames')[0])]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat('MyDello-PublicIP-Web-', copyIndex(1)))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
        }
      },
      "tags": "[variables('standardTags')]"
    },
    {
      "type": "Microsoft.Compute/virtualMachines",
      "apiVersion": "2021-03-01",
      "name": "[concat(variables('vmNamePrefix'), '-', copyIndex(1))]",
      "location": "[parameters('location')]",
      "copy": {
        "name": "vmCopy",
        "count": 2
      },
      "dependsOn": [
        "nicCopy",
        "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]"
      ],
      "properties": {
        "availabilitySet": {
          "id": "[resourceId('Microsoft.Compute/availabilitySets', variables('availabilitySetName'))]"
        },
        "hardwareProfile": {
          "vmSize": "[parameters('vmSize')]"
        },
        "osProfile": {
          "computerName": "[concat(variables('vmNamePrefix'), '-', copyIndex(1))]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPasswordOrKey')]"
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', concat('MyDello-NIC-Web-', copyIndex(1)))]"
            }
          ]
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "Canonical",
            "offer": "ubuntu-24_04-lts",
            "sku": "server",
            "version": "latest"
          },
          "osDisk": {
            "createOption": "FromImage",
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            }
          }
        }
      },
      "tags": "[variables('standardTags')]"
    }
  ],
  "outputs": {
    "publicIPAddresses": {
      "type": "array",
      "copy": {
        "count": 2,
        "input": {
          "vmName": "[concat(variables('vmNamePrefix'), '-', copyIndex(1))]",
          "publicIP": "[reference(resourceId('Microsoft.Network/publicIPAddresses', concat('MyDello-PublicIP-Web-', copyIndex(1)))).ipAddress]"
        }
      }
    }
  }
}
